Delete old db migrations files...

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,4 +1,8 @@
 SECRET_KEY=CHANGE_ME
 DEBUG=CHANGE_ME
 ALLOWED_HOSTS=CHANGE_ME
-
+DB_NAME=CHANGE_ME
+DB_USER=CHANGE_ME
+DB_PASS=CHANGE_ME
+DB_HOST=CHANGE_ME
+DB_PORT=CHANGE_ME
