Update settings and dependencies
Add and configure django-debug-toolbar package
Update queryset. Add select_related() method.
Update Makefile. Add new commands to make routine calls a little more easier.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ SQLAlchemy = "2.0.18"
 sqlparse = "0.4.4"
 typing_extensions = "4.7.1"
 tzdata = "2023.3"
+django-debug-toolbar = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
