--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "3.12.0"
 Django = "^4.2"
 djangorestframework = "^3.14.0"
-mysqlclient = "^2.1.0"
+mysqlclient = "2.1.0"
 openpyxl = "^3.1.2"
 pandas = "^2.0.3"
 Pillow = "^10.0.0"
